--- a/playtranscribe/package.json
+++ b/playtranscribe/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "firebase": "^10.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "openai": "^4.62.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -48,6 +51,8 @@
     ]
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/jwt-decode": "^3.1.0",
     "firebase-tools": "^13.17.0"
   }
 }
