--- a/playtranscribe_backend/.gitignore
+++ b/playtranscribe_backend/.gitignore
@@ -10,6 +10,9 @@ firebase-debug.*.log*
 # Firebase cache
 .firebase/
 
+/node_modules
+.env
+
 # Firebase config
 
 # Uncomment this if you'd like others to create their own Firebase project.
