--- a/playtranscribe/.gitignore
+++ b/playtranscribe/.gitignore
@@ -17,6 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+
+#Firebase Config
+firebase/firebaseConfig.ts
 
 npm-debug.log*
 yarn-debug.log*
